# libpeli

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compile_flags.txt  peli-ppc.ld  toolchain-devkitppc.cmake  toolchain-powerpc.cmake
bindings/ogc/: System.cpp  compile_flags.txt
bindings/ogc/include/: gcbool.h  gctypes.h  gcutil.h  ogcsys.h
bindings/ogc/include/ogc/: gx_struct.h  system.h
peli/cmn/: Asm.h  AsmRegisters.h  Macro.h  Types.hpp
peli/common/: Asm.h  Macro.h  Types.h  Types.hpp
peli/disk/: DeviceTable.hpp
peli/fat/: Config.hpp  FatFs.cpp  FatFs.hpp  IO.cpp  IO.hpp
peli/host/: Config.h  Host.hpp  MessageQueue.hpp  Mutex.hpp
peli/hw/: Bit.hpp  Interrupt.hpp  Latte.hpp  Namespace.hpp  ProcessorInterface.hpp  Register.hpp  SDHostController.hpp  Video.cpp  Video.hpp  VideoInterface.hpp  VideoMode.cpp  Wood.hpp
peli/ios/: Error.hpp  Interface.hpp  LoMem.hpp  Reply.hpp  Request.hpp  Resource.hpp
peli/ios/di/: Types.hpp
peli/ios/es/: Types.hpp
peli/ios/fs/: File.hpp  Interface.hpp  Nand.hpp  Types.hpp
peli/ios/iosc/: Types.hpp
peli/ios/low/: Ipc.cpp  Ipc.hpp
peli/ios/net/ip/top/: Types.hpp
peli/ios/sdio/: Card.cpp  Card.hpp  HcReg.hpp  Interface.hpp  Ioctl.hpp  Types.hpp
peli/ios/stm/eventhook/: Ioctl.hpp
peli/ios/stm/immediate/: Ioctl.hpp
peli/log/: VideoConsole.cpp  VideoConsole.hpp  VideoConsoleStdOut.cpp  VideoConsoleStdOut.hpp
peli/nand/: File.hpp  Nand.hpp
peli/nand/conf/: Bt.hpp  Dev.hpp  Dvd.hpp  Ipl.hpp  Mpls.hpp  Net.hpp  SysConf.cpp  SysConf.hpp  Www.hpp
peli/ppc/: Bat.hpp  Cache.hpp  Context.cpp  Context.hpp  Exception.hpp  Gpr.hpp  Hid0.hpp  Hid2.hpp  Hid4.hpp  L2Cache.hpp  L2cr.hpp  Msr.cpp  Msr.hpp  PairedSingle.hpp  Ps.hpp  Spr.hpp  SprInterface.hpp  SprRwCtl.hpp  Sync.hpp
peli/ppc/detail/: SprInterface.hpp
peli/rt/: Arena.cpp  Arena.hpp  Args.cpp  Args.hpp  Arguments.cpp  Arguments.hpp  Cond.hpp  Crt0.cpp  Exception.cpp  Exception.hpp  Exceptions.cpp  Exceptions.hpp  Exit.cpp  Exit.hpp  GThread.cpp  Linker.hpp  Memory.cpp  Memory.hpp  MessageQueue.hpp  Mutex.cpp  Mutex.hpp  Newlib.cpp  Once.cpp  Once.hpp  Start.cpp  SystemCall.cpp  SystemCall.hpp  Thread.cpp  Thread.hpp  ThreadQueue.hpp
peli/runtime/: Args.cpp  Args.hpp  Cond.hpp  Crt0.cpp  Exception.cpp  Exception.hpp  GThread.cpp  Memory.cpp  Memory.hpp  MessageQueue.hpp  Mutex.cpp  Mutex.hpp  Once.cpp  Once.hpp  SystemCall.cpp  SystemCall.hpp  Thread.cpp  Thread.hpp  ThreadQueue.hpp
peli/util/: Address.hpp  Bit.hpp  Concept.hpp  Constructor.hpp  CpuCache.hpp  Defer.hpp  Enum.hpp  Halt.hpp  List.hpp  Memory.hpp  NoConstruct.hpp  Optimize.hpp  String.hpp  Time.hpp  Transform.hpp  VIConsole.cpp  VIConsole.hpp  VIConsoleFont.c  VIConsoleStdOut.cpp  VIConsoleStdOut.hpp
peli/vi/: Video.cpp  Video.hpp  VideoMode.cpp
tests/: AllHeaders.cpp  Arguments.cpp  CMakeLists.txt  HardReset.cpp  SDCard.cpp  SimpleApp.cpp  SpecialPurposeRegisters.cpp  SysConfReader.cpp  VideoConsole.cpp
tests/simple/: CMakeLists.txt  SimpleApp.cpp
wsh/common/: Asm.h  Types.h
wsh/host/: Config.h  MessageQueue.hpp
wsh/hw/: Bit.hpp  Interrupt.hpp  ProcessorInterface.hpp  Register.hpp  Video.cpp  Video.hpp  VideoInterface.hpp  VideoMode.cpp  Wood.hpp
wsh/hw/reg/: ProcessorInterface.hpp  VideoInterface.hpp  Wood.hpp
wsh/hw/reg/detail/: Register.hpp
wsh/ios/: Error.hpp  Interface.hpp  LoMem.hpp  Reply.hpp  Request.hpp  Resource.hpp
wsh/ios/di/: Types.hpp
wsh/ios/es/: Types.hpp
wsh/ios/fs/: File.hpp  Interface.hpp  Nand.hpp  Types.hpp
wsh/ios/iosc/: Types.hpp
wsh/ios/ipc/: Low.cpp  Low.hpp
wsh/ios/low/: Ipc.cpp  Ipc.hpp
wsh/ios/net/ip/top/: Types.hpp
wsh/ppc/: Bat.hpp  Cache.cpp  Cache.hpp  Context.cpp  Context.hpp  Exception.hpp  Gpr.hpp  Hid0.hpp  Hid2.hpp  Hid4.hpp  L2Cache.hpp  L2cr.hpp  Msr.cpp  Msr.hpp  Ps.hpp  Spr.hpp  SprRwCtl.hpp  Sync.hpp
wsh/ppc/detail/: SprInterface.hpp
wsh/runtime/: Args.cpp  Args.hpp  Cond.hpp  Crt0.cpp  Exception.cpp  Exception.hpp  GThread.cpp  Memory.cpp  Memory.hpp  MessageQueue.hpp  Mutex.cpp  Mutex.hpp  Once.cpp  Once.hpp  Thread.cpp  Thread.hpp  ThreadQueue.hpp
wsh/util/: Address.hpp  Bit.hpp  CpuCache.hpp  Debug.hpp  Detail.hpp  Enum.hpp  Halt.hpp  List.hpp  Optimize.hpp  Time.hpp  ViConsole.cpp  ViConsole.hpp  ViConsoleFont.c  ViConsoleStdOut.cpp  ViConsoleStdOut.hpp
